--- a/src/duckstation-libretro/CMakeLists.txt
+++ b/src/duckstation-libretro/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(duckstation_libretro SHARED
+add_library(swanstation_libretro SHARED
   libretro_audio_stream.cpp
   libretro_audio_stream.h
   libretro_game_settings.cpp
@@ -17,7 +17,7 @@ add_library(duckstation_libretro SHARED
 )
 
 if(WIN32)
-  target_sources(duckstation_libretro PRIVATE
+  target_sources(swanstation_libretro PRIVATE
     libretro_d3d11_host_display.cpp
     libretro_d3d11_host_display.h
   )
@@ -25,26 +25,26 @@ endif()
 
 if (MSVC)
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DELAYLOAD:OpenGL32.dll")
-  target_link_libraries(duckstation_libretro PRIVATE core common glad scmversion frontend-common vulkan-loader libretro-common Delayimp.lib)
+  target_link_libraries(swanstation_libretro PRIVATE core common glad scmversion frontend-common vulkan-loader libretro-common Delayimp.lib)
 else()
-  target_link_libraries(duckstation_libretro PRIVATE core common glad scmversion frontend-common vulkan-loader libretro-common)
+  target_link_libraries(swanstation_libretro PRIVATE core common glad scmversion frontend-common vulkan-loader libretro-common)
 endif()
 
 
 # no lib prefix
-set_target_properties(duckstation_libretro PROPERTIES PREFIX "")
+set_target_properties(swanstation_libretro PROPERTIES PREFIX "")
 
 # drop in the build directory
-set_target_properties(duckstation_libretro PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
-set_target_properties(duckstation_libretro PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+set_target_properties(swanstation_libretro PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+set_target_properties(swanstation_libretro PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
 # work around .sln issue of hardcoded config directories
 if(WIN32)
-  set_target_properties(duckstation_libretro PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}")
-  set_target_properties(duckstation_libretro PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")
+  set_target_properties(swanstation_libretro PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}")
+  set_target_properties(swanstation_libretro PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")
 endif()
 
 # for android, suffix _android
 if(ANDROID)
-  set_target_properties(duckstation_libretro PROPERTIES OUTPUT_NAME "duckstation_libretro_android")
+  set_target_properties(swanstation_libretro PROPERTIES OUTPUT_NAME "swanstation_libretro_android")
 endif()
