--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,8 +23,8 @@ jobs:
       - name: ZIP Release
         uses: papeloto/action-zip@v1
         with:
-          files: duckstation_libretro.so
-          dest: duckstation_libretro.so.zip
+          files: swanstation_libretro.so
+          dest: swanstation_libretro.so.zip
 
       - name: Get release
         id: get_release
@@ -38,7 +38,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: duckstation_libretro.so.zip
-          asset_name: duckstation-Linux-x86_64.zip
+          asset_path: swanstation_libretro.so.zip
+          asset_name: swanstation-Linux-x86_64.zip
           asset_content_type: application/zip
 
