--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,11 @@ message("CMake System Name: ${CMAKE_SYSTEM_NAME}")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")
 
 # Platform detection.
-if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
   set(LINUX TRUE)
   set(SUPPORTS_X11 TRUE)
   set(SUPPORTS_WAYLAND TRUE)
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "FreeBSD")
+elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "FreeBSD")
   set(FREEBSD TRUE)
   set(SUPPORTS_X11 TRUE)
 endif()
@@ -188,7 +188,7 @@ if(MSVC)
   set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO} /OPT:REF /OPT:ICF")
 
   # Enable LTO/LTCG on Release builds.
-  if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
+  if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
     cmake_policy(SET CMP0069 NEW)
     include(CheckIPOSupported)
     check_ipo_supported(RESULT IPO_IS_SUPPORTED)
@@ -218,7 +218,7 @@ endif()
 
 
 # Detect processor type.
-if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "amd64")
+if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64" OR "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "amd64")
   # Fix case where CMAKE_SYSTEM_PROCESSOR is x86_64 in a 32bit userspace
   if(CMAKE_SIZEOF_VOID_P EQUAL 8)
     set(CPU_ARCH "x64")
@@ -232,12 +232,12 @@ elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
   else()
     set(CPU_ARCH "x86")
   endif()
-elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR
-       ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
+elseif("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR
+       "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "i686")
   set(CPU_ARCH "x86")
-elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
+elseif("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64")
   set(CPU_ARCH "aarch64")
-elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armv7-a" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armv7l" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "armv8l")
+elseif("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm" OR "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armv7-a" OR "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armv7l" OR "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armv8l")
   set(CPU_ARCH "aarch32")
   if(ANDROID)
     # Force ARM mode, since apparently ANDROID_ARM_MODE isn't working..
