--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,3 +29,10 @@ endif()
 if(BUILD_REGTEST)
   add_subdirectory(duckstation-regtest)
 endif()
+
+# HLE BIOS HACKING
+if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
+    add_definitions(/FI"fi-platform-defines.h" /FI"fi-printf-redirect.h")
+else()
+    add_definitions(-include fi-platform-defines.h -include fi-printf-redirect.h)
+endif()
