--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
           submodules: true
 
       - run: cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_LIBRETRO_CORE=ON .
-      - run: cmake --build . --parallel 2
+      - run: cmake --build . --parallel 2 && strip -s swanstation_libretro.so
 
       - name: ZIP Release
         uses: papeloto/action-zip@v1
