Switch CI to the new branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [piepacker]
+    branches: [piepacker2]
   pull_request:
-    branches: [piepacker]
+    branches: [piepacker2]
 
 defaults:
   run:
